@@ -80,7 +80,7 @@ public class XmlUpdateRequestHandlerTest extends SolrTestCaseJ4 {
   }
   
   @Test
-  public void testCommitWithin() throws Exception
+  public void testRequestParams() throws Exception
   {
     String xml = 
       "<add>" +
@@ -90,7 +90,7 @@ public class XmlUpdateRequestHandlerTest extends SolrTestCaseJ4 {
       "  </doc>" +
       "</add>";
 
-    SolrQueryRequest req = req("commitWithin","100");
+    SolrQueryRequest req = req("commitWithin","100","overwrite","false");
     SolrQueryResponse rsp = new SolrQueryResponse();
     BufferingRequestProcessor p = new BufferingRequestProcessor(null);
 
@@ -98,8 +98,8 @@ public class XmlUpdateRequestHandlerTest extends SolrTestCaseJ4 {
     loader.load(req, rsp, new ContentStreamBase.StringStream(xml));
 
     AddUpdateCommand add = p.addCommands.get(0);
-    assertEquals(add.commitWithin, 100);
-
+    assertEquals(100, add.commitWithin);
+    assertEquals(false, add.overwrite);
     req.close();
   }
 
